SONAR-10046 adding minimum length validation to api/components